snippet: masonries for dummies

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <!--app-theme-->
     <!--app-head-->
+    <!--app-styles-->
   </head>
   <body>
     <div id="app"><!--app-html--></div>
